; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_rpaphp_core.c_get_power_status.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_rpaphp_core.c_get_power_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hotplug_slot = type { i64 }
%struct.slot = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hotplug_slot*, i32*)* @get_power_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_power_status(%struct.hotplug_slot* %0, i32* %1) #0 {
  %3 = alloca %struct.hotplug_slot*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.slot*, align 8
  store %struct.hotplug_slot* %0, %struct.hotplug_slot** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load %struct.hotplug_slot*, %struct.hotplug_slot** %3, align 8
  %9 = getelementptr inbounds %struct.hotplug_slot, %struct.hotplug_slot* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.slot*
  store %struct.slot* %11, %struct.slot** %7, align 8
  %12 = load %struct.slot*, %struct.slot** %7, align 8
  %13 = getelementptr inbounds %struct.slot, %struct.slot* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @rtas_get_power_level(i32 %14, i32* %6)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %2
  %19 = load i32, i32* %6, align 4
  %20 = load i32*, i32** %4, align 8
  store i32 %19, i32* %20, align 4
  br label %21

21:                                               ; preds = %18, %2
  %22 = load i32, i32* %5, align 4
  ret i32 %22
}

declare dso_local i32 @rtas_get_power_level(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
